# YandexTasks

./: .gitignore  CMakeLists.txt  README.md
155. Уникальные элементы/: README.md  main.cpp
176. День рождения Васи/: README.md  correct.cpp  main.cpp
182. Закрытый ключ/: README.md  main.cpp
187. Программист на пляже/: README.md  main.cpp
189. Перемещение чанков/: README.md  main.cpp
194. Разделение графа/: README.md  main.cpp
198. Поиск/: README.md  main.cpp
204. Ошибка/: README.md  main  main.c  main.cpp  main.py
211. Встречи/: README.md  main.cpp
213. Автодополнение/: README.md  main.cpp
251. Набор символов/: README.md
324. Много стульев/: README.md  main  main.c  main.cpp  main.py
325. Коля и датацентры/: README.md  main.cpp  main.py
349. Опять JSON’ы перекладывать (разминка)/: README.md  main.cpp
352. Камни и украшения/: README.md  main.cpp  main.py
353. Сортировка положительных чисел в обратном порядке (разминка)/: README.md  main.cpp
357. Граф подстрок/: README.md  main.cpp
360. Частый элемент/: README.md  main  main.cpp
361. Средний элемент/: README.md  main.cpp
70. Ближайшее число/: README.md  main.cpp
A. Три единицы подряд/: README.md  main.cpp
B. Покупка билетов/: README.md  main.cpp
C++. A. Новая история/: README.md  main.cpp
C++. B. Горе от перфекционизма/: README.md  main.cpp
C++. B. Разнообразие/: README.md  main.cpp
C++. B. Ровный забор/: README.md  main.cpp
C++. H. Вычеркивание/: README.md  main.cpp
C++. А. Лучше клавиатуры не сыскать?/: README.md  main.cpp
C++. В. Через тернии к клиенту/: main.cpp
(+12 files in other folders)
